# cairn

./: .env.example  .gitignore  LICENSE  LICENSE copy  README.md  interactive_worker_manager.py  repos.json  requirements.txt  start-dev.sh  task_data_documentation.md  tasks_export.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: sast.yml
agent_worker/: README.md  __init__.py  __main__.py  worker.py
cairn-env/: pyvenv.cfg
cairn_utils/: agent_classes.py  github_utils.py  pyproject.toml  setup.py  supported_models.py  task_storage.py  task_storage_payload.py  tool_related_prompts.py  tool_types.py  toolbox.py
cairn_utils/agents/: agent_consts.py  fullstack_planner.py  langgraph_utils.py  llm_consts.py  pm.py  swe.py  thought_logger.py  wrapper.py
cairn_utils/agents/logs/llm_logs/: 20250611_163732_235991_api_payload.json  20250611_163738_992675_parsed_response.json
cairn_utils/agents/testing/: example_ainvoke_input.json  fake_anthropic_calls.json  fake_openai_calls.json
fastapi_app/: app.py
frontend/: .gitignore  README.md  api.ts  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/client/: index.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/components/: AuthButton.tsx
frontend/server/: index.ts  routes.ts  storage.ts
frontend/shared/: schema.ts
logs/llm_logs/: 20250627_163359_428786_api_payload.json  20250627_180216_108653_parsed_response.json
static/: index.html  repo-details.html  repos.html
(+44 files in other folders)
