[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn_utils"
version = "0.1.0"
authors = [
    {name = "Cairn Team", email = "your.email@example.com"},
]
description = "Utility functions for Cairn applications"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
